config/kind/ingressgw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: slate-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - istio-ingressgateway.istio-system.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - istio-ingressgateway.istio-system.svc.cluster.local
  gateways:
  - slate-gateway.sample.svc.cluster.local
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: helloworld.sample.svc.cluster.local
        port:
          number: 5000
